# LeanMQ

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pyproject.toml  ruff.toml  setup.py
.github/workflows/: deploy-docs.yml  publish.yml
docs/: index.md
docs/.vitepress/: config.mjs
docs/.vitepress/theme/: HomeLayout.vue  Layout.vue  index.js
docs/.vitepress/theme/styles/: main.css
docs/examples/: basic-messaging.md  webhook-services.md
docs/examples/microservice/: defining-the-event-system.md  event-bus-implementation.md  implementing-shipping-and-notification-services.md  implementing-specific-microservices.md  microservice-implementation.md  running-the-event-driven-system.md
docs/guide/: basic-overview.md  getting-started.md  intro.md  webhook-pattern.md  why-leanmq.md
docs/guide/advanced/: error-handling.md  production.md  queue-management.md  scaling.md  transactions.md
docs/reference/: core.md  exceptions.md  message.md  queue.md  transaction.md  webhook.md
src/leanmq/: __init__.py  webhook.py
