[project]
name = "leanmq"
version = "0.1.0"
description = "Simple, efficient message queue based on Redis Streams."
authors = [{ name = "Augustus D'Souza", email = "augustus.public@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = []


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
